[gd_scene load_steps=18 format=3 uid="uid://cm0bg75ggl3jp"]

[ext_resource type="FontFile" uid="uid://ciijjbxlx6xl7" path="res://resources/fonts/COOPBL.ttf" id="1_v7suu"]
[ext_resource type="Script" path="res://scripts/akzeptieren.gd" id="1_ycop2"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_v44mi"]
bg_color = Color(0.137, 0.372, 63.243, 1)
border_width_left = 15
border_width_top = 15
border_width_right = 15
border_width_bottom = 15
border_color = Color(0.0461662, 0.283828, 0.999996, 1)
border_blend = true
corner_radius_top_left = 35
corner_radius_top_right = 35
corner_radius_bottom_right = 35
corner_radius_bottom_left = 35
expand_margin_left = 40.0
expand_margin_top = 40.0
expand_margin_right = 40.0
expand_margin_bottom = 40.0
shadow_color = Color(0.0375193, 0.275378, 1, 0.6)
shadow_size = 90

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_q6y0u"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_4n6q3"]
bg_color = Color(2.40654e-08, 0.280974, 0.196912, 1)
border_width_left = 15
border_width_top = 15
border_width_right = 15
border_width_bottom = 15
border_color = Color(0, 0.282, 0.196, 0.286)
border_blend = true
corner_radius_top_left = 150
corner_radius_bottom_right = 150
shadow_color = Color(0, 0.282, 0.196, 0.757)
shadow_size = 25

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_h117j"]
bg_color = Color(0, 0.647733, 0.903827, 1)
border_width_left = 15
border_width_top = 15
border_width_right = 15
border_width_bottom = 15
border_color = Color(0.646257, 0.819201, 1, 1)
border_blend = true
corner_radius_top_left = 859
corner_radius_top_right = 1024
corner_radius_bottom_right = 1024
corner_radius_bottom_left = 1024
shadow_color = Color(0.099, 0.67, 1, 0.854)
shadow_size = 25

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_4uxn1"]
bg_color = Color(0, 0.647733, 0.903827, 1)
border_width_left = 15
border_width_top = 15
border_width_right = 15
border_width_bottom = 15
border_color = Color(0.646257, 0.819201, 1, 1)
border_blend = true
corner_radius_top_left = 1024
corner_radius_top_right = 1024
corner_radius_bottom_right = 1024
corner_radius_bottom_left = 1024
shadow_color = Color(0.099, 0.67, 1, 0.854)
shadow_size = 25

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_udp7r"]
bg_color = Color(0, 0.647733, 0.903827, 1)
border_width_left = 15
border_width_top = 15
border_width_right = 15
border_width_bottom = 15
border_color = Color(0.646257, 0.819201, 1, 1)
border_blend = true
corner_radius_top_left = 1024
corner_radius_top_right = 1024
corner_radius_bottom_right = 1024
corner_radius_bottom_left = 1024
expand_margin_left = 35.0
expand_margin_right = 35.0
expand_margin_bottom = 20.0
shadow_color = Color(0.099, 0.67, 1, 0.854)
shadow_size = 25

[sub_resource type="Theme" id="Theme_6sfp6"]
default_font = ExtResource("1_v7suu")
Button/colors/font_color = Color(0.284398, 0.000272228, 0.877517, 1)
Button/colors/font_focus_color = Color(0.433069, 0.241361, 1, 1)
Button/colors/font_hover_color = Color(0.431373, 0.243137, 1, 1)
Button/colors/font_hover_pressed_color = Color(0.431373, 0.243137, 1, 1)
Button/colors/font_outline_color = Color(0, 0, 0, 1)
Button/colors/font_pressed_color = Color(0.431373, 0.243137, 1, 1)
Button/constants/outline_size = 20
Button/font_sizes/font_size = 45
Button/styles/focus = SubResource("StyleBoxEmpty_q6y0u")
Button/styles/hover = SubResource("StyleBoxFlat_4n6q3")
Button/styles/normal = SubResource("StyleBoxFlat_h117j")
Button/styles/pressed = SubResource("StyleBoxFlat_4uxn1")
Label/colors/font_color = Color(0.286275, 0, 0.878431, 1)
Label/colors/font_outline_color = Color(0, 0, 0, 1)
Label/constants/outline_size = 20
Label/styles/normal = SubResource("StyleBoxFlat_udp7r")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_tdoe4"]
bg_color = Color(9.62615e-07, 0.605707, 0.896598, 1)
border_width_left = 15
border_width_top = 15
border_width_right = 15
border_width_bottom = 15
border_color = Color(1.15514e-06, 0.459416, 0.689032, 1)
border_blend = true
corner_radius_top_left = 35
corner_radius_top_right = 35
corner_radius_bottom_right = 35
corner_radius_bottom_left = 35
expand_margin_left = 35.0
expand_margin_top = 35.0
expand_margin_right = 35.0
expand_margin_bottom = 175.0

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_bf5ck"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_f6q0u"]
bg_color = Color(0, 0.647733, 0.903827, 1)
border_width_left = 15
border_width_top = 15
border_width_right = 15
border_width_bottom = 15
border_color = Color(0.646257, 0.819201, 1, 1)
border_blend = true
corner_radius_top_left = 859
corner_radius_top_right = 1024
corner_radius_bottom_right = 1024
corner_radius_bottom_left = 1024
shadow_color = Color(0.099, 0.67, 1, 0.854)
shadow_size = 25

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_kngc3"]
bg_color = Color(0, 0.647733, 0.903827, 1)
border_width_left = 15
border_width_top = 15
border_width_right = 15
border_width_bottom = 15
border_color = Color(0.646257, 0.819201, 1, 1)
border_blend = true
corner_radius_top_left = 859
corner_radius_top_right = 1024
corner_radius_bottom_right = 1024
corner_radius_bottom_left = 1024
shadow_color = Color(0.099, 0.67, 1, 0.854)
shadow_size = 25

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_gqje5"]
bg_color = Color(0, 0.647733, 0.903827, 1)
border_width_left = 15
border_width_top = 15
border_width_right = 15
border_width_bottom = 15
border_color = Color(0.646257, 0.819201, 1, 1)
border_blend = true
corner_radius_top_left = 1024
corner_radius_top_right = 1024
corner_radius_bottom_right = 1024
corner_radius_bottom_left = 1024
shadow_color = Color(0.099, 0.67, 1, 0.854)
shadow_size = 25

[sub_resource type="Theme" id="Theme_hq385"]
default_font = ExtResource("1_v7suu")
Button/colors/font_color = Color(1, 0, 0, 1)
Button/colors/font_focus_color = Color(0.513753, 1.11904e-06, 1.92523e-07, 1)
Button/colors/font_hover_color = Color(0.513726, 0, 0, 1)
Button/colors/font_hover_pressed_color = Color(0.513726, 0, 0, 1)
Button/colors/font_outline_color = Color(0, 0, 0, 1)
Button/colors/font_pressed_color = Color(0.513726, 0, 0, 1)
Button/constants/outline_size = 20
Button/font_sizes/font_size = 90
Button/styles/focus = SubResource("StyleBoxEmpty_bf5ck")
Button/styles/hover = SubResource("StyleBoxFlat_f6q0u")
Button/styles/normal = SubResource("StyleBoxFlat_kngc3")
Button/styles/pressed = SubResource("StyleBoxFlat_gqje5")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_qmeak"]
bg_color = Color(0, 0.647733, 0.903827, 1)
border_width_left = 15
border_width_top = 15
border_width_right = 15
border_width_bottom = 15
border_color = Color(0.646257, 0.819201, 1, 1)
border_blend = true
corner_radius_top_left = 859
corner_radius_top_right = 1024
corner_radius_bottom_right = 1024
corner_radius_bottom_left = 1024
shadow_color = Color(0.099, 0.67, 1, 0.854)
shadow_size = 25

[sub_resource type="Theme" id="Theme_2bw1u"]
default_font = ExtResource("1_v7suu")
Button/colors/font_color = Color(1, 0.529412, 0, 1)
Button/colors/font_focus_color = Color(0.480708, 0.241753, 9.62615e-08, 1)
Button/colors/font_hover_color = Color(0.482353, 0.243137, 0, 1)
Button/colors/font_hover_pressed_color = Color(0.482353, 0.243137, 0, 1)
Button/colors/font_outline_color = Color(0, 0, 0, 1)
Button/colors/font_pressed_color = Color(0.482353, 0.243137, 0, 1)
Button/constants/outline_size = 20
Button/font_sizes/font_size = 90
Button/styles/focus = SubResource("StyleBoxEmpty_bf5ck")
Button/styles/hover = SubResource("StyleBoxFlat_qmeak")
Button/styles/normal = SubResource("StyleBoxFlat_kngc3")
Button/styles/pressed = SubResource("StyleBoxFlat_gqje5")

[node name="akzeptieren" type="CenterContainer"]
process_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 550.0
offset_bottom = 340.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ycop2")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_v44mi")

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
theme = SubResource("Theme_6sfp6")
theme_override_font_sizes/font_size = 61
theme_override_styles/normal = SubResource("StyleBoxFlat_tdoe4")
horizontal_alignment = 1
vertical_alignment = 1

[node name="CenterContainer" type="CenterContainer" parent="PanelContainer/VBoxContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/VBoxContainer/CenterContainer"]
layout_mode = 2
theme_override_constants/separation = 40

[node name="Ja" type="Button" parent="PanelContainer/VBoxContainer/CenterContainer/HBoxContainer"]
custom_minimum_size = Vector2(280, 0)
layout_mode = 2
theme = SubResource("Theme_hq385")
text = "Ja"

[node name="Nein" type="Button" parent="PanelContainer/VBoxContainer/CenterContainer/HBoxContainer"]
custom_minimum_size = Vector2(280, 0)
layout_mode = 2
theme = SubResource("Theme_2bw1u")
text = "Nein"

[connection signal="focus_entered" from="PanelContainer/VBoxContainer/CenterContainer/HBoxContainer/Ja" to="." method="_on_focus_entered"]
[connection signal="mouse_entered" from="PanelContainer/VBoxContainer/CenterContainer/HBoxContainer/Ja" to="." method="_on_mouse_entered"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/CenterContainer/HBoxContainer/Ja" to="." method="_on_ja_pressed"]
[connection signal="focus_entered" from="PanelContainer/VBoxContainer/CenterContainer/HBoxContainer/Nein" to="." method="_on_focus_entered"]
[connection signal="mouse_entered" from="PanelContainer/VBoxContainer/CenterContainer/HBoxContainer/Nein" to="." method="_on_mouse_entered"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/CenterContainer/HBoxContainer/Nein" to="." method="_on_nein_pressed"]
